<resources>
    <string name="app_name">LessonCheck</string>
    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="login_input_number">输入你的学号/教师号</string>
    <string name="login_input_password">输入你的密码</string>
    <string name="login_btn_register">注册帐号</string>
    <string name="login_btn_login">登录</string>
    <string name="register_label_account">账户：</string>
    <string name="register_label_password">密码：</string>
    <string name="register_label_name">姓名：</string>
    <string name="register_label_sex">性别：</string>
    <string name="register_label_problem">密保问题：</string>
    <string name="register_label_answers">密保答案：</string>
    <string name="register_input_number">请输入10位以上的学/教师号</string>
    <string name="register_input_password">6~16位英文字符 区分大小写</string>
    <string name="register_hint_necessary">必填</string>
    <string name="register_label_student">我是学生</string>
    <string name="register_label_teacher">我是教师</string>
	<string name="add_class_classNumber">课堂代码</string>
	<string name="add_class_class">加入课堂</string>
	<string name="add_class_classNumber_hint">7位英文字符 区分大小写</string>
	<string name="create_check_limitTime">限制时间</string>
	<string name="create_check_local">当前位置</string>
	<string name="create_check_hint">系统会生成随机口令</string>
	<string name="create_class_className">课堂名称：</string>
	<string name="create_class_classNum">课程代码：</string>
	<string name="create_class_hint">7位英文字符 区分大小写</string>
	<string name="create_class_add">添加课堂</string>
	<string name="student_check_key">签到口令：</string>
	<string name="student_check_btn">签到</string>
	<string name="student_check_hint">6个英文字符</string>
</resources>
