<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CreateClassActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/baseColor"
        android:textStyle="bold"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/create_class_className"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:shadowColor="@color/baseColor"
            android:theme="@style/MyEditText"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/create_class_classNum"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_classNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_check_hint"
            android:digits="@string/rule_text"
            android:shadowColor="@color/baseColor"
            android:theme="@style/MyEditText"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/btn_createClass"
            android:textSize="20sp"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_above="@+id/btn_refresh"
            android:layout_marginTop="5dp"
            android:theme="@style/AppTheme.Button"
            android:text="@string/create_class_add"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>