<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CreateCheckActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/baseColor"
        android:textStyle="bold"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        />
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/create_check_limitTime"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"

            />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/time"
            android:gravity="center"
            />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/create_check_local"
            />
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint=""
            android:shadowColor="@color/baseColor"
            android:theme="@style/MyEditText"
            />
        <Button
            android:id="@+id/btn_getLocal"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_refresh"
            android:theme="@style/AppTheme.Button"
            android:drawableLeft="@drawable/local"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:hint="@string/create_check_hint"
            />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:id="@+id/btn_create"
            android:textSize="20sp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_above="@+id/btn_refresh"
            android:layout_marginTop="5dp"
            android:theme="@style/AppTheme.Button"
            android:text="发布签到"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>